syntax = "proto3";
package address_book;

option java_multiple_files  = true;
option java_package         = "com.example.address_book.protos";
option java_outer_classname = "AddressBookProtos";
option csharp_namespace     = "Example.AddressBook";
option go_package           = "github.com/example/address_book";

message PhoneNumber {
    string number = 1;
    enum PhoneType {
        MOBILE = 0;
        HOME   = 1;
        WORK   = 2;
    }
    PhoneType type = 2;
}